# qwen-tts-ws-http

./: .gitignore  README.md  callbacks.py  config.py  index.html  main.py  pyproject.toml  settings.yaml  utils.py
