[project]
name = "qwen-tts-ws-http"
version = "0.1.0"
description = "Convert qwen3-tts realtime websocket to HTTP and streaming."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.36",
    "dashscope>=1.25.9",
    "dynaconf>=3.2.12",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]
